--- a/app_documento/app/assets/stylesheets/application.css.scss
+++ b/app_documento/app/assets/stylesheets/application.css.scss
@@ -13,6 +13,8 @@
  *= require_self
  *= require_tree .
  *= require formalize
+ *= require formtastic_changes
+ *= require formtastic
  */
 
 // Colores de la aplicacion
