--- a/app_documento/app/views/usuarios/show.html.erb
+++ b/app_documento/app/views/usuarios/show.html.erb
@@ -1,55 +1,101 @@
-<p id="notice"><%= notice %></p>
 
-<p>
-  <b>Login:</b>
-  <%= @usuario.login %>
-</p>
 
-<p>
-  <b>Mail:</b>
-  <%= @usuario.email %>
-</p>
-
-<p>
-  <b>Telefono:</b>
-  <%= @usuario.telefono %>
-</p>
-
-<p>
-  <b>Nombre:</b>
-  <%= @usuario.nombre %>
-</p>
-
-<p>
-  <b>Apellido:</b>
-  <%= @usuario.apellido %>
-</p>
-
-<p>
-  <b>Compania:</b>
-  <%= @usuario.compania %>
-</p>
-
-<p>
-  <b>Rif:</b>
-  <%= @usuario.rif %>
-</p>
-
-<p>
-  <b>Permisos:</b>
+<table class="tabla_show">
+  <thead>
+    <tr>
+      <td colspan="2">
+        <b>Información de usuario</b>
+      </td>
+    </tr>
+  </thead> 
+  <tr>
+    <td>
+      <b>Usuario:</b>
+    </td>
+    <td>
+      <%= @usuario.login %>
+    </td>
+  </tr>
+  <tr>
+    <td>
+      <b>Mail:</b>
+    </td>
+    <td>
+      <%= @usuario.email %>
+    </td>
+  </tr>
+  <tr>
+    <td>
+      <b>Telefono:</b>
+    </td>
+    <td>
+      <%= @usuario.telefono %>
+    </td>
+  </tr>
+  <tr>
+    <td>
+      <b>Nombre:</b>
+    </td>
+    <td>
+      <%= @usuario.nombre %>
+    </td>
+  </tr>
+  <tr>
+    <td>
+      <b>Apellido:</b>
+    </td>
+    <td>
+      <%= @usuario.apellido %>
+    </td>
+  </tr>
+  <tr>
+    <td>
+      <b>Compania:</b>
+    </td>
+    <td>
+      <%= @usuario.compania %>
+    </td>
+  </tr>
+  <tr>
+    <td>
+      <b>Rif:</b>
+    </td>
+    <td>
+      <%= @usuario.rif %>
+    </td>
+  </tr>
+  <tr>
+    <td>
+      <b>Permisos:</b>
+    </td>
+    <td>
       <% case @usuario.admin
            when 0 %>
            Cliente
-      <%   when 1 %>
+         <%   when 1 %>
            Admin
-      <%   when 2 %>
-        Super-Admin
-      <%   else   %>
-        Contactar servicio
-      <% end %>
-</p>
+         <%   when 2 %>
+           Super-Admin
+         <%   else   %>
+           Contactar servicio
+         <% end %>
+       </td>
+     </table>
+     <center>
+       <% if current_usuario.admin == 2 %>
+         <button class="customize">
+           <%= link_to 'Modificar', edit_usuario_path(@usuario) %> 
+         </button>
+         <button class="customize">             
+           <%= link_to 'Eliminar', @usuario, method: :delete, data: { confirm: '¿Estas seguro que deseas eliminar este usuario?' } %>
+         </button>
+         <% elsif current_usuario.login == @usuario.login %>
+         <button class="customize">
+           <%= link_to 'Modificar', edit_usuario_path(@usuario) %> 
+         </button>
 
-<% if current_usuario.admin == 2 %>
-  <%= link_to 'Edit', edit_usuario_path(@usuario) %> 
-<% end %>
-<%= link_to 'Back', usuarios_path %>
+       <% end %>
+     </center>
+
+   <p id="notice"><%= notice %></p>
+
