--- a/app_documento/app/views/inicio/index.html.erb
+++ b/app_documento/app/views/inicio/index.html.erb
@@ -46,6 +46,11 @@
               <td>XXXXXX</td>
             </tr>
             <tr>
+              <td>Producto 4</td>
+              <td>Marca 3</td>
+              <td>XXXXXX</td>
+            </tr>
+            <tr>
               <td>Producto 5</td>
               <td>Marca 5</td>
               <td>XXXXXX</td>
@@ -91,7 +96,7 @@
               <% if current_usuario.admin > 0 %>
                 <td>Usuario X</td>
               <% end %>
-              <td class="estado"><div class="alerta"></div></td>
+              <td class="estado"><div class="alerta">1</div></td>
             </tr>
             <tr>
               <td>Solicitud 2</td>
@@ -99,7 +104,7 @@
               <% if current_usuario.admin > 0 %>
                 <td>Usuario X</td>
               <% end %>
-              <td class="estado"><div class="alerta" style="background: red;"></div></td>
+              <td class="estado"><div class="alerta" style="background: red;">2</div></td>
             </tr>
             <tr>
               <td>Solicitud 3</td>
@@ -107,7 +112,7 @@
               <% if current_usuario.admin > 0 %>
                 <td>Usuario X</td>
               <% end %>
-              <td class="estado"><div class="alerta" style="background : yellow"></div></td>
+              <td class="estado"><div class="alerta" style="background : yellow">3</div></td>
             </tr>
             <tr>
               <td>Solicitud 4</td>
@@ -115,7 +120,7 @@
               <% if current_usuario.admin > 0 %>
                 <td>Usuario X</td>
               <% end %>
-              <td class="estado"><div class="alerta" ></div></td>
+              <td class="estado"><div class="alerta">1</div></td>
             </tr>
             <tr>
               <td>Solicitud 5</td>
@@ -123,7 +128,7 @@
               <% if current_usuario.admin > 0 %>
                 <td>Usuario X</td>
               <% end %>
-              <td class="estado"><div class="alerta" style="background: blue"></div></td>
+              <td class="estado"><div class="alerta" style="background: blue">4</div></td>
             </tr>
           </tbody>
         </table>
