--- a/app_documento/app/views/layouts/application.html.erb
+++ b/app_documento/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   <div id="wrapper">
     <header>
       <div id="headUp">
-        <%= link_to image_tag("http://placehold.it/450x40/701100/ffffff.png", :id => "logo"), home_path %>
+        <%= link_to image_tag("http://placehold.it/450x40/133655/911100.png", :id => "logo"), home_path %>
         <% if usuario_signed_in? %>
           <ul>
             <li class="drop" id="compania" title="<%= current_usuario.compania %>"><%= current_usuario.compania %></li>
@@ -61,17 +61,20 @@
 
     <footer>
       <ul>
-        <li style="float: left;">
-          <%= link_to 'Contáctanos', "mailto:marthaovalles@gmail.com",
-                      :title => "Envia un e-mail para comunicarte con nosotros.", :target => "_blank",
-                      :style => "color: white !important; font-weight:20;" %>
-        </li>
-        <li>
-          <%= link_to image_tag("/assets/chrome.png",
-                      :title => "Para esta pagina se recomienda usar el explorador Google Chrome."),
-                      "https://www.google.com/intl/en/chrome/browser", :target => "_blank" %>
-        </li>
-        <li>
+        <% if usuario_signed_in? %>
+          <li>
+            <%= link_to 'Contáctanos', "mailto:marthaovalles@gmail.com",
+                        :title => "Envia un e-mail para comunicarte con nosotros.", :target => "_blank",
+                        :style => "color: white !important; font-weight:20;" %>
+          </li>
+        <% else %>
+          <li>
+            <%= link_to image_tag("/assets/chrome.png",
+                        :title => "Para esta pagina se recomienda usar el explorador Google Chrome."),
+                        "https://www.google.com/intl/en/chrome/browser", :target => "_blank" %>
+          </li>
+        <% end %>
+        <li style="float: right;">
           <%= link_to image_tag("/assets/kiwi.png", :title => "Elaborado por Kiwi Systems"),
                       "http://www.facebook.com/chamini2", :target => "_blank" %>
         </li>
