--- a/app_documento/app/assets/stylesheets/usuarios.css.scss
+++ b/app_documento/app/assets/stylesheets/usuarios.css.scss
@@ -1,7 +1,7 @@
 // Place all the styles related to the Usuarios controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-$background_color : #911100;
+$background_color : #133a6b;
 
 .tabla_list {
 
@@ -37,7 +37,7 @@ $background_color : #911100;
 
     }
     tr:nth-child(even) {
-      background-color: #D3A099;
+      background-color: #5294aa;
     }
 
   }
@@ -92,7 +92,7 @@ $background_color : #911100;
       }
     }
     tr:nth-child(even) {
-      background-color: #D3A099;
+      background-color: #5294aa;
     }
   }
 }
