listo el cambio de colores para el inicio.

--- a/app_documento/app/assets/stylesheets/inicio.css.scss
+++ b/app_documento/app/assets/stylesheets/inicio.css.scss
@@ -77,10 +77,18 @@ p {
         tbody {
           tr:nth-child(even) {
             background-color: #5294aa;
+
+            td.sorting_1 {
+              background-color: transparent;
+            }
           }
 
           tr:nth-child(odd) {
             background-color: #fff;
+
+            td.sorting_1 {
+              background-color: transparent;
+            }
           }
 
           td {
