--- a/app_documento/app/assets/stylesheets/usuarios.css.scss
+++ b/app_documento/app/assets/stylesheets/usuarios.css.scss
@@ -1,47 +1,16 @@
 // Place all the styles related to the Usuarios controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
 $background_color : #911100;
 
-.tabla_list {
 
-  border-spacing: 0;
-  margin: auto;
-  margin-top: 35px;
-  border: 1px solid #666;
-  border-radius: 3px;
+.dataTables_wrapper {
 
-  input[type="submit"]{
-    padding: 10px;
-    margin-left: 0;
-    margin-bottom: 5px;
-  }
-  thead {
-    color: white;
-
-    tr {
-      background: $background_color;
-    }
-  }
-  tbody {
-    td {
-      text-align:center;
-      /*Puntos suspensivos*/
-      white-space: nowrap;
-      overflow: hidden;
-      -o-text-overflow: ellipsis;
-      -ms-text-overflow: ellipsis;
-      text-overflow: ellipsis;
-      min-width: 90px;
-      max-width: 90px;
-
-    }
-    tr:nth-child(even) {
-      background-color: #D3A099;
-    }
-
-  }
+  height: 300px;
+  margin-top:60px;
 }
+
 
 .tabla_show {
 
