--- a/app_documento/app/assets/stylesheets/application.css.scss
+++ b/app_documento/app/assets/stylesheets/application.css.scss
@@ -16,6 +16,7 @@
  *= require formtastic_changes
  *= require formtastic
  *= require dataTables/jquery.dataTables
+ *= require jquery.ui.all
  */
 
 // Colores de la aplicacion
@@ -48,6 +49,7 @@ ul {
 a,a:visited {
   text-decoration: none;
   color: black !important;
+  cursor: pointer;
   background: transparent !important;
 
   &:hover {
