--- a/app_documento/app/assets/stylesheets/usuarios.css.scss
+++ b/app_documento/app/assets/stylesheets/usuarios.css.scss
@@ -23,43 +23,37 @@ $background_color : #133a6b;
   margin-top:60px;
 }
 
+.title_show {
+  width: 300px;
+  text-align:left;
+  padding-left: 20px;
+  margin-top: 50px;
+  margin-left: 20px;
+  border-bottom: 1px solid $background_color;  
+}
+
+.cos_icon {
+  margin-left: 10px;
+  width: 20px;
+}
+
 
 .tabla_show {
 
   border-spacing: 0;
-  margin: auto;
-  margin-top: 70px;
+  margin-top: 10px;
+  margin-left:50px;
   width: 400px;
-  border: 1px solid #666;
-  border-radius: 3px;
 
   input[type="submit"]{
     padding: 10px;
     margin-left: 0;
     margin-bottom: 5px;
   }
-  thead {
-    color: white;
-    text-align: center;
-    tr {
-      background: $background_color;
-      td {
-
-        padding: 5px;
-        font-size: 16px;
-
-      }
-    }
-  }
-  tbody {
+    tbody {
     tr {
 
-      td:first-child{
-        width: 50px;
-      }
-
       td {
-        text-align:center;
         /*Puntos suspensivos*/
         white-space: nowrap;
         overflow: hidden;
@@ -72,11 +66,31 @@ $background_color : #133a6b;
 
       }
     }
-    tr:nth-child(even) {
-      background-color: #5294aa;
-    }
   }
 }
+
+.conf_list {
+}
+
+.conf_list ul { 
+  width: 300px;
+  margin-left: 20px;
+  list-style:none; 
+  padding:10px 0; 
+}
+
+.conf_list ul li { 
+  padding:0 10px; 
+}
+
+.conf_list ul li a { 
+  text-decoration:none; color:#eee; 
+}
+
+.conf_list ul li a:hover { 
+  text-decoration:underline; 
+}
+
 .customize {
   margin-top: 30px;
 }
