--- a/app_documento/app/assets/stylesheets/formtastic_changes.css.scss
+++ b/app_documento/app/assets/stylesheets/formtastic_changes.css.scss
@@ -6,8 +6,9 @@ ol {
 
 
 form.formtastic {
-  height: 300px;
+ /* height: 300px;*/
 }
+
 
 form.formtastic input {
   border-radius: 3px;
@@ -22,6 +23,7 @@ form.formtastic {
     margin-top: 35px;
     border: 1px solid #666;
     border-radius: 3px;
+    height: 0px;
 
     label {
       margin-left: 10px;
