--- a/app_documento/app/views/correos_usuario/enviar_contrasena.html.erb
+++ b/app_documento/app/views/correos_usuario/enviar_contrasena.html.erb
@@ -4,11 +4,16 @@
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
   </head>
   <body>
-    <h1>Bienvenido a NombredelaAplicacion, <%= @usuario.nombre %></h1>
+    <%if @modo == 1%>
+    <h1>Bienvenido a ProductosKiwi, <%= @usuario.nombre %></h1>
     <p>
     Usted ha sido exitosamente registrado en la aplicación X
     Sus datos para inicio de sesión son los siguientes:
     </p>
+  <% else%>
+    <h1>Recuperacion de contraseña</h1>
+    <p> Sus nuevos datos para acceder al sistema son: </p>
+    <%end%>
     <table border="0">
       <tr>
         login: <%= @usuario.login %>
@@ -18,7 +23,7 @@
       </tr>
     </table>
     <p>
-    Para iniciar sesion, haga click en el siguiente enlace: <%= @url %>.
+    Para iniciar sesion, haga click en el siguiente <%=link_to 'enlace', new_usuario_session_url %>.
     </p>
     <p>Gracias por elegirnos!</p>
   </body>
