--- a/app_documento/app/views/usuarios/index.html.erb
+++ b/app_documento/app/views/usuarios/index.html.erb
@@ -7,7 +7,7 @@
   <%= link_to 'Nuevo Usuario', new_usuario_path %>
 </button>
 
-<table class="tabla_list">
+<table id="tabla_list_usuario">
   <thead>
       <th>Login</th>
       <th>Mail</th>
