--- a/app_documento/app/views/inicio/index.html.erb
+++ b/app_documento/app/views/inicio/index.html.erb
@@ -96,7 +96,7 @@
               <% if current_usuario.admin > 0 %>
                 <td>Usuario X</td>
               <% end %>
-              <td class="estado"><div class="alerta">1</div></td>
+              <td class="estado alerta" title="Por enviar" style="background: white">a</td>
             </tr>
             <tr>
               <td>Solicitud 2</td>
@@ -104,7 +104,7 @@
               <% if current_usuario.admin > 0 %>
                 <td>Usuario X</td>
               <% end %>
-              <td class="estado"><div class="alerta" style="background: red;">2</div></td>
+              <td class="estado alerta" title="Rechazado" style="background: red">e</td>
             </tr>
             <tr>
               <td>Solicitud 3</td>
@@ -112,7 +112,7 @@
               <% if current_usuario.admin > 0 %>
                 <td>Usuario X</td>
               <% end %>
-              <td class="estado"><div class="alerta" style="background : yellow">3</div></td>
+              <td class="estado alerta" title="Retrasado" style="background: yellow">i</td>
             </tr>
             <tr>
               <td>Solicitud 4</td>
@@ -120,7 +120,7 @@
               <% if current_usuario.admin > 0 %>
                 <td>Usuario X</td>
               <% end %>
-              <td class="estado"><div class="alerta">1</div></td>
+              <td class="estado alerta" title="Por enviar" style="background: white">a</td>
             </tr>
             <tr>
               <td>Solicitud 5</td>
@@ -128,7 +128,7 @@
               <% if current_usuario.admin > 0 %>
                 <td>Usuario X</td>
               <% end %>
-              <td class="estado"><div class="alerta" style="background: blue">4</div></td>
+              <td class="estado alerta" title="Aceptado" style="background: blue">o</td>
             </tr>
           </tbody>
         </table>
