--- a/app_documento/app/assets/stylesheets/application.css.scss
+++ b/app_documento/app/assets/stylesheets/application.css.scss
@@ -184,11 +184,12 @@ header {
 }
 
 .alerta {
-  float: right !important;
+  float: right;
+  padding: 0 !important;
   margin-top: 3px;
   margin-left: 3px;
   height: 13px !important;
-  max-width: 13px;
+  max-width: 13px !important;
   min-width: 13px !important;
   border-radius: 7px;
   border: 1px solid black;
